--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
     "axios": "^1.11.0",
+    "formik": "^2.4.6",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-heroicons": "^4.0.0",
