--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/drawer": "^7.5.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-heroicons": "^4.0.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
-    "react-native-svg": "^15.12.1"
+    "react-native-svg": "^15.12.1",
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
