--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
         android:windowSoftInputMode="adjustResize"
         android:exported="true">
         <intent-filter>
+        <activity
+             android:name=".MainActivity"
+             android:label="@string/app_name"
+             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+             android:screenOrientation="portrait"
+             android:windowSoftInputMode="adjustResize">
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
