--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-gifted-charts": "^1.4.63",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-heroicons": "^4.0.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
+    "react-native-svg": "^15.12.1",
     "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
