--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,44 +1,40 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.navambhaw_app">
 
     <uses-permission android:name="android.permission.INTERNET" />
-        <!-- For picking images -->
+    <!-- For picking images -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-
-          <!-- If you also want to pick videos -->
+    <!-- If you also want to pick videos -->
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-
-         <!-- If you want to pick audio -->
+    <!-- If you want to pick audio -->
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
-
-        <!-- for camera permission  -->
+    <!-- For camera permission -->
     <uses-permission android:name="android.permission.CAMERA" />
 
-
     <application
-      android:name=".MainApplication"
-      android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:allowBackup="false"
-      android:theme="@style/AppTheme"
-      android:supportsRtl="true">
-      <activity
-        android:name=".MainActivity"
+        android:name=".MainApplication"
         android:label="@string/app_name"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
-        android:launchMode="singleTask"
-        android:windowSoftInputMode="adjustResize"
-        android:exported="true">
-        <intent-filter>
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:allowBackup="false"
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true">
+
         <activity
-             android:name=".MainActivity"
-             android:label="@string/app_name"
-             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
-             android:screenOrientation="portrait"
-             android:windowSoftInputMode="adjustResize">
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-      </activity>
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true"
+            android:screenOrientation="portrait">
+            
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            
+        </activity>
+
     </application>
 </manifest>
