--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -38,4 +38,7 @@ newArchEnabled=true
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
-
+MYAPP_UPLOAD_STORE_FILE=Navambhaw.keystore
+MYAPP_UPLOAD_KEY_ALIAS=navambhawalias
+MYAPP_UPLOAD_STORE_PASSWORD=Navambhaw@123
+MYAPP_UPLOAD_KEY_PASSWORD=Navambhaw@123
