added caraousel and logo

--- a/ios/navambhaw_App/Info.plist
+++ b/ios/navambhaw_App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>navambhaw_App</string>
+	<string>Navambhaw</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
